test_suite/tests/ui/fail/invalid_array_min_max/invalid_arg_array_min_max.stderr
error: custom attribute panicked
 --> $DIR/invalid_arg_array_min_max.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: invalid `min` and `max` number of arguments for `values : [u32 ; 3]`, expected the `min == max` but was: `0` and `3`
